--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
     <meta charset="UTF-8">
     <!-- normalize.min.css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+    <link rel="stylesheet" href="css/ostrich-sans/">
     <link rel="stylesheet" href="css/style.css">
     <title>履歷</title>
 </head>
 
 <body>
     <!-- note header -->
+
+    <div class="box">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, sunt!</p>
+    </div>
+
+    <a href="https://fonts.google.com/?selection.family=Diplomata+SC|Roboto:400,700,900&query=ro" class="btn">HERE IS LINK</a>
     <header>
         <!-- todo add a cool background-image -->
         <h1 class="header-title">I'm Somebody, a Web developer in Taiwan</h1>
@@ -34,7 +41,8 @@
                 <h4>Aggressive</h4>
             </div>
         </div>
-        <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, blanditiis. Doloremque sit sint voluptas perspiciatis amet explicabo voluptate non, accusamus maiores at et! Pariatur porro exercitationem similique, deserunt recusandae ab laboriosam! Sed animi architecto repudiandae iusto temporibus, corrupti nobis laudantium sequi omnis quidem, modi neque blanditiis facilis. <br> Suscipit quod quisquam numquam soluta quia! Ea accusamus consectetur alias excepturi! Ea maiores animi sint ipsum nostrum assumenda esse qui rem eum earum sit repellendus harum blanditiis saepe soluta accusamus quam numquam ad quod, ipsa temporibus praesentium cupiditate quo. Harum explicabo ex similique nulla excepturi error ipsa, recusandae! Repellat distinctio architecto neque odit tenetur voluptatem nihil incidunt beatae quis explicabo, alias quia corporis optio quisquam nobis, quam sunt similique rerum fuga ut. Neque.</p>
+        <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, blanditiis. Doloremque sit sint voluptas perspiciatis amet explicabo voluptate non, accusamus maiores at et! Pariatur porro exercitationem similique, deserunt recusandae ab laboriosam! Sed animi architecto repudiandae iusto temporibus, corrupti nobis laudantium sequi omnis quidem, modi neque blanditiis facilis.
+            <br> Suscipit quod quisquam numquam soluta quia! Ea accusamus consectetur alias excepturi! Ea maiores animi sint ipsum nostrum assumenda esse qui rem eum earum sit repellendus harum blanditiis saepe soluta accusamus quam numquam ad quod, ipsa temporibus praesentium cupiditate quo. Harum explicabo ex similique nulla excepturi error ipsa, recusandae! Repellat distinctio architecto neque odit tenetur voluptatem nihil incidunt beatae quis explicabo, alias quia corporis optio quisquam nobis, quam sunt similique rerum fuga ut. Neque.</p>
     </section>
     <!-- note section skill-set section -->
     <section class="skill-set">
